# netcopilot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.tunnel.yml  docker-compose.yml  models.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: vendor_support.md
.github/workflows/: secret-scan.yml  tests.yml
demo/: README.md  seed.json
demo/branch/: manifest.json
demo/campus/: manifest.json
demo/containerlab/: README.md  apply-configs.py  fix-vlans.py  inventory.yaml  topology.clab.yml
demo/containerlab/configs/: acc-sw-01.cfg  acc-sw-03.cfg  acc-sw-04.cfg  bdr-rtr-01.cfg  bdr-rtr-02.cfg  bdr-rtr-03.cfg  core-sw-01.cfg  edge-fw-01.cfg  isp-01.cfg  isp-02.cfg  isp-03.cfg
demo/drift-demo/: README.md
demo/l2-campus/: manifest.json
docs/architecture/: README.md  link-builder.md  overview.md
examples/: inventory.yaml
fixtures/: README.md  seed.json
fixtures/golden/: LEDGER-R2-L2L3.md  LEDGER-SECFW.md  LEDGER.md  README.md  drift-demo.json
fixtures/golden/demo/: snapshot.json
fixtures/golden/demo-l2/: snapshot.json
inventory/: README.md
knowledge_base/: README.md
scripts/: README.md  golden_master.py  netcopilot-watcher.service  run-watcher.sh
src/netcopilot/: agent_runtime.py  anonymizer.py  cli.py  context.py  correlation.py  demo_seed.py  deprecated_rules.py  drift_demo_seed.py  findings.py  orchestrator.py  pipeline.py  telegram_bot.py
src/netcopilot/analysis/: correlation_engine.py  remediation_loader.py
tests/: test_anonymizer.py  test_blast_radius.py  test_cli_diff.py  test_collect_netconf.py  test_collect_rest.py  test_collect_restconf.py  test_collect_strategies.py  test_collector.py  test_config_parser.py  test_dashboard_shell.py  test_demo_toggle.py  test_deprecated_rules.py  test_diagram.py  test_diff_engine.py  test_diff_route.py  test_drift_golden.py  test_facts_builder_genie.py  test_findings.py  test_graph_load_findings.py  test_graph_load_firewall_arp.py  test_graph_load_model.py  test_graph_load_model_live.py  test_graph_load_policies_security.py  test_graph_load_routes.py  test_graph_schema.py  test_inventory.py  test_inventory_folders.py  test_l2_campus_demo.py  test_l2_domains.py  test_link_builder_arp.py  test_link_builder_bgp.py  test_link_builder_cdp.py  test_link_builder_classify.py  test_link_builder_enrich_l2.py  test_link_builder_enrich_l3.py  test_link_builder_fdb_firewall.py  test_link_builder_ha_cables.py  test_link_builder_lacp.py  test_link_builder_lacp_multibundle.py  test_link_builder_lldp.py  (+64 more)
tunnel/: Dockerfile
(+411 files in other folders)
